--- a/styles/singleProject.module.css
+++ b/styles/singleProject.module.css
@@ -5,7 +5,8 @@
     grid-template-rows: auto 120px;
     gap: 10px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-    height: 375px;
+    min-height: 375px;
+    height: fit-content;
     border-radius: 5px;
     background-color: var(--bgsecondary);
 }
